Fix line wrap of text submissions

--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/text-submission-viewer/text-submission-viewer.component.scss
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/text-submission-viewer/text-submission-viewer.component.scss
@@ -2,7 +2,7 @@
     height: 100%;
     overflow-y: auto;
     padding: 0.5rem;
-    white-space: pre;
+    white-space: pre-wrap;
     word-wrap: normal;
 
     &.no-file {
@@ -11,6 +11,7 @@
 
     &.is-code {
         font-family: monospace;
+        white-space: pre;
     }
 }
 
